# gst-renderer

./: gst-renderer.h  meson.build
doc/: gstrenderer-sections.txt  meson.build
doc/handwritten/: introduction.markdown
doc/markdown_doc_pages/: meson.build
doc/slate_markdown_doc_pages/: meson.build
src/: gst-renderer-job.c  gst-renderer-job.h  gst-renderer-types.c  gst-renderer-types.h  meson.build
tools/: meson.build  renderer.c
